Added unit tests for file download API, human readable times for last modified, added icons for files and directories.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,6 +35,10 @@ body {
     border-radius: 7px;
 }
 
+.file {
+    padding: 10px 15px;
+}
+
 .file-listings > div:not(:first-child) {
-    border-top: 1px solid black;
+    border-top: 1px solid #cecece;
 }
