--- a/templates/home.html
+++ b/templates/home.html
@@ -44,6 +44,20 @@
             <div class="row row-fix file-listings">
                 {% for key in files %}
                     <div class="col-md-12 file">
+                        {% if key.last_modified | humanize != '' %}
+                        <svg width="1.3rem" height="1.3rem" viewBox="0 0 16 16" class="bi bi-file-binary" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M4 1h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H4z"/>
+                            <path d="M5.526 13.09c.976 0 1.524-.79 1.524-2.205 0-1.412-.548-2.203-1.524-2.203-.978 0-1.526.79-1.526 2.203 0 1.415.548 2.206 1.526 2.206zm-.832-2.205c0-1.05.29-1.612.832-1.612.358 0 .607.247.733.721L4.7 11.137a6.749 6.749 0 0 1-.006-.252zm.832 1.614c-.36 0-.606-.246-.732-.718l1.556-1.145c.003.079.005.164.005.249 0 1.052-.29 1.614-.829 1.614zm5.329.501v-.595H9.73V8.772h-.69l-1.19.786v.688L8.986 9.5h.05v2.906h-1.18V13h3z"/>
+                          </svg>
+                        {% else %}
+                        <svg width="1.3rem" height="1.3rem" viewBox="0 0 16 16" class="bi bi-folder" fill="currentColor"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M9.828 4a3 3 0 0 1-2.12-.879l-.83-.828A1 1 0 0 0 6.173 2H2.5a1 1 0 0 0-1 .981L1.546 4h-1L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3v1z" />
+                            <path fill-rule="evenodd"
+                                d="M13.81 4H2.19a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zM2.19 3A2 2 0 0 0 .198 5.181l.637 7A2 2 0 0 0 2.826 14h10.348a2 2 0 0 0 1.991-1.819l.637-7A2 2 0 0 0 13.81 3H2.19z" />
+                        </svg>
+                        {% endif %}
                         {% if dir == 'root' %}
                             <a href="/home/{{key.name}}">
                                 {{key.name}}
@@ -53,11 +67,11 @@
                                 {{key.name}}
                             </a>
                         {% endif %}
-                        <p>
+                        <!-- <p>
                             {{ key.crc }}
-                        </p>
+                        </p> -->
                         <p>
-                            Last modified: {{ key.last_modified }}
+                            Last modified: {{ key.last_modified | humanize }}
                         </p>
                     </div>
                 {% endfor %}
